Fixed overflow behavior

--- a/client/main.css
+++ b/client/main.css
@@ -42,10 +42,13 @@
   --main-font: 'Maven Pro', 'Montserrat', sans-serif; 
 } 
 
-body {
+html, body {
   font-family: var(--main-font);
   font-size: 16px;
   background-color: #E7F0F7 !important;
+
+  height: 100vh;
+  overflow: hidden;
 
   overscroll-behavior-y: none;
   overflow-x: hidden; 
@@ -67,16 +70,14 @@ body {
 }
 
 .container {
-  min-height: 100vh !important;
-  overflow: auto;
+  overflow: scroll;
+  height: 100vh;
+
   max-width: 100%;
-  min-height: 100%;
   padding-top: 20px;
   padding-left: 20px !important;
   padding-right: 20px !important;
   background: var(--idewe-background) !important; 
-  display: flex;
-  flex-direction: column;
 
   /* Disable text selection and highlighting */
   -webkit-touch-callout: none; /* iOS Safari */
